<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             android:layout_width="match_parent"
                                             android:visibility="gone"
                                             app:layout_behavior="@string/appbar_scrolling_view_behavior"
                                             android:layout_height="match_parent">

    <ImageView android:id="@+id/snapshot"
               android:layout_width="130dp"
               android:layout_height="130dp"
               android:background="@color/semi_black"
               app:layout_constraintTop_toTopOf="parent"
               app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
            android:layout_gravity="bottom"
            android:background="@color/semi_black"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <LinearLayout
                android:orientation="horizontal"
                android:gravity="center" android:layout_width="match_parent"
                android:layout_height="wrap_content">


            <Button
                    android:visibility="visible"
                    android:text="@string/clean_world"
                    android:id="@+id/cleanScene"
                    style="@style/ButtonStyle"/>

            <Button
                    android:visibility="visible"
                    android:text="@string/load_world"
                    android:id="@+id/loadWorld"
                    style="@style/ButtonStyle"/>

        </LinearLayout>

        <LinearLayout
                android:orientation="horizontal"
                android:gravity="center" android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <ToggleButton
                    android:visibility="visible"
                    android:textOff="@string/start_record"
                    android:textOn="@string/save_record"
                    android:id="@+id/recordControl"
                    style="@style/ButtonStyle"/>

            <include layout="@layout/video_record_button"/>

        </LinearLayout>

    </LinearLayout>

    <ProgressBar
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:visibility="gone"
            android:layout_centerInParent="true"
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"/>

</androidx.constraintlayout.widget.ConstraintLayout>
