<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="40dp"
    android:layout_marginBottom="40dp"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingEnd="@dimen/activity_horizontal_margin">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginBottom="100dp"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/planesInfoTextView"
                style="@style/LabelStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="No recording info"
                android:textAlignment="textStart"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/telemetryInfoTextView"
                style="@style/LabelStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="No telemetry data"
                android:textAlignment="textStart" />

            <TextView
                android:id="@+id/nodeInfoTextView"
                style="@style/LabelStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="No node info data"
                android:textAlignment="textStart" />
        </LinearLayout>
    </ScrollView>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:gravity="end"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <RadioGroup
            android:id="@+id/localRemoteRadioGroup"
            style="@style/ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="visible">

            <RadioButton
                android:id="@+id/localRadioBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="Local" />

            <RadioButton
                android:id="@+id/grpcRadioBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="GRPC" />
        </RadioGroup>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/sessionStartStopSwitch"
            style="@style/ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:drawablePadding="4dp"
            android:text="@string/startSession"
            android:visibility="gone" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/videoRecordSwitch"
            style="@style/ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:drawablePadding="4dp"
            android:text="@string/video_record"
            android:textOff="Off"
            android:textOn="On"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent" />


        <LinearLayout
            style="@style/ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:orientation="horizontal">

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/telemetrySwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:drawablePadding="4dp"
                android:text="@string/telemetry_control"
                android:textOff="Off"
                android:textOn="On" />


            <CheckBox
                android:id="@+id/telemtryVideoCheckBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="Video" />

        </LinearLayout>


        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/loadWorldSwitch"
            style="@style/ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:drawablePadding="4dp"
            android:text="Load world"
            android:textOff="Off"
            android:textOn="On" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/gridHorizontalSwitch"
            style="@style/ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:drawablePadding="4dp"
            android:text="Horizontal grid"
            android:textOff="Off"
            android:textOn="On"
            android:visibility="gone" />

        <Button
            android:id="@+id/cleanScene"
            style="@style/ButtonStyle"
            android:text="@string/clean_world"
            android:visibility="visible" />


        <Button
            android:id="@+id/testOpenCV"
            style="@style/ButtonStyle"
            android:text="@string/test_opencv"
            android:visibility="visible" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/progressView"
        style="@style/ButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:paddingBottom="100dp"
        android:visibility="gone">

        <TextView
            android:id="@+id/textInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="Saving telemetry data to local storage \n please wait!" />

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textInfo"
            android:layout_centerInParent="true"
            android:indeterminate="true" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>